# conductor

./: Cargo.toml  Containerfile  README.md  log.txt
.github/wiki/: Home.md
.github/workflows/: init-wiki.yml  release.yml
assets/: dashboard.html
config/: conductor.yaml
docs/: ARCHITECTURE.md  FORMAL_GAP_ANALYSIS.md  OPERATIONS.md  TARGET_ARCHITECTURE.md
migrations/: 0001_init.sql  0002_execution_and_metrics.sql  0003_task_graph.sql  0004_execution_claims_and_events.sql  0005_repository_inventory.sql  0006_findings.sql  0007_delivery_pipeline.sql  0008_traceability_links.sql  0009_ai_approval_metadata.sql  0010_history_ordering_indexes.sql
scripts/: build-deb.sh  set-release-version.sh
src/: app.rs  approvals.rs  config.rs  dashboard.rs  discovery.rs  error.rs  executor.rs  findings.rs  integrations.rs  lib.rs  main.rs  models.rs  planner.rs  policy.rs  repository.rs  service.rs  trends.rs  validation.rs
src/integrations/: atlassian.rs  continuum.rs  refiner.rs  tracey.rs
src/storage/: memory.rs  postgres.rs
